--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -5,7 +5,7 @@
   "languageserver": {
     "rescript": {
       "enable": true,
-      "module": "~/.vim/plugged/vim-rescript/rescript-vscode-1.0.0/extension/server/out/server.js",
+      "module": "~/.vim/plugged/vim-rescript/rescript-vscode/extension/server/out/server.js",
       "args": ["--node-ipc"],
       "filetypes": ["rescript"],
       "rootPatterns": ["bsconfig.json"]
