--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "snowpack-rescript-react",
-  "version": "0.0.2",
+  "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reason-seoul/snowpack-rescript-react.git"
+  },
   "keywords": [
     "csa-template",
     "snowpack",
@@ -8,28 +13,39 @@
     "react"
   ],
   "scripts": {
-    "postinstall": "bsb -make-world",
-    "start:re": "bsb -make-world -w",
+    "prepack": "git clean -fdx",
+    "postinstall": "rescript build -with-deps",
+    "start:re": "rescript build -w",
     "start:snowpack": "snowpack dev",
     "start": "run-p start:**",
-    "build:re": "bsb -clean-world -make-world",
+    "build:re": "rescript build",
     "build:snowpack": "snowpack build",
     "build": "run-s build:**",
+    "format": "rescript format",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
+  "files": [
+    ".gitignore",
+    "bsconfig.json",
+    "README.md",
+    "snowpack.config.mjs",
+    "public",
+    "src"
+  ],
   "resolutions": {
-    "react": "0.0.0-experimental-27659559e",
-    "react-dom": "0.0.0-experimental-27659559e"
+    "react": "0.0.0-experimental-2d8d133e1",
+    "react-dom": "0.0.0-experimental-2d8d133e1"
   },
   "dependencies": {
-    "@rescript/react": "^0.10.1",
-    "bs-platform": "^8.4.2",
+    "@rescript/react": "^0.10.3",
+    "bs-webapi": "^0.19.1",
     "react": "experimental",
-    "react-dom": "experimental"
+    "react-dom": "experimental",
+    "rescript": "^9.1.2"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-react-refresh": "^2.5.0",
     "npm-run-all": "^4.1.5",
-    "snowpack": "^3.0.1"
+    "snowpack": "^3.5.1"
   }
 }
